fix: fixed MR feedback
