# docs/swagger.yaml
@@ -161,6 +161,13 @@ definitions:
       nonce:
         type: string
     type: object
+  worker.ListWorkerPartnersResponse:
+    properties:
+      partners:
+        items:
+          $ref: '#/definitions/worker.WorkerPartner'
+        type: array
+    type: object
   worker.UpdateWorkerPartnerRequest:
     properties:
       minerSubscriptionKey:
@@ -188,7 +195,7 @@ definitions:
       walletAddress:
         type: string
     type: object
-  worker.WorkerLoginSuccessResp:
+  worker.WorkerLoginSuccessResponse:
     properties:
       token: {}
     type: object
@@ -212,6 +219,9 @@ definitions:
     type: object
 info:
   contact: {}
+  description: This is the worker API for the Dojo project.
+  title: Dojo Worker API
+  version: "1.0"
 paths:
   /api/v1/auth/{address}:
     get:
@@ -690,7 +700,7 @@ paths:
             - $ref: '#/definitions/api.ApiResponse'
             - properties:
                 body:
-                  $ref: '#/definitions/worker.WorkerLoginSuccessResp'
+                  $ref: '#/definitions/worker.WorkerLoginSuccessResponse'
               type: object
         "400":
           description: Invalid wallet address or chain ID
@@ -715,54 +725,6 @@ paths:
       summary: Worker login
       tags:
       - Authentication
-  /api/v1/worker/partner:
-    post:
-      consumes:
-      - application/json
-      description: Create a partnership between a worker and a miner
-      parameters:
-      - description: Bearer token
-        in: header
-        name: Authorization
-        required: true
-        type: string
-      - description: Request body containing the name and miner subscription key
-        in: body
-        name: body
-        required: true
-        schema:
-          $ref: '#/definitions/worker.WorkerPartnerCreateRequest'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: Successfully created worker-miner partnership
-          schema:
-            allOf:
-            - $ref: '#/definitions/api.ApiResponse'
-            - properties:
-                body:
-                  type: string
-              type: object
-        "400":
-          description: Invalid request body or missing required fields
-          schema:
-            $ref: '#/definitions/api.ApiResponse'
-        "401":
-          description: Unauthorized
-          schema:
-            $ref: '#/definitions/api.ApiResponse'
-        "404":
-          description: Miner subscription key is invalid
-          schema:
-            $ref: '#/definitions/api.ApiResponse'
-        "500":
-          description: Internal server error
-          schema:
-            $ref: '#/definitions/api.ApiResponse'
-      summary: Create worker-miner partnership
-      tags:
-      - Worker Partner
   /api/v1/worker/partner/disable:
     put:
       consumes:
@@ -811,6 +773,95 @@ paths:
           schema:
             $ref: '#/definitions/api.ApiResponse'
       summary: Disable miner by worker
+      tags:
+      - Worker Partner
+  /api/v1/worker/partner/list:
+    get:
+      consumes:
+      - application/json
+      description: Retrieve a list of partnerships between a worker and miners
+      parameters:
+      - description: Bearer token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Successfully retrieved worker-miner partnership list
+          schema:
+            allOf:
+            - $ref: '#/definitions/api.ApiResponse'
+            - properties:
+                body:
+                  $ref: '#/definitions/worker.ListWorkerPartnersResponse'
+              type: object
+        "400":
+          description: Invalid request or missing required fields
+          schema:
+            $ref: '#/definitions/api.ApiResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/api.ApiResponse'
+        "404":
+          description: Worker not found
+          schema:
+            $ref: '#/definitions/api.ApiResponse'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/api.ApiResponse'
+      summary: Get worker-miner partnership list
+      tags:
+      - Worker Partner
+    post:
+      consumes:
+      - application/json
+      description: Create a partnership between a worker and a miner
+      parameters:
+      - description: Bearer token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: Request body containing the name and miner subscription key
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/worker.WorkerPartnerCreateRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Successfully created worker-miner partnership
+          schema:
+            allOf:
+            - $ref: '#/definitions/api.ApiResponse'
+            - properties:
+                body:
+                  type: string
+              type: object
+        "400":
+          description: Invalid request body or missing required fields
+          schema:
+            $ref: '#/definitions/api.ApiResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/api.ApiResponse'
+        "404":
+          description: Miner subscription key is invalid
+          schema:
+            $ref: '#/definitions/api.ApiResponse'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/api.ApiResponse'
+      summary: Create worker-miner partnership
       tags:
       - Worker Partner
 swagger: "2.0"
